--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,13 +1,14 @@
 [package]
 name = "time-tracker-billing-plugin"
-version.workspace = true
-authors.workspace = true
-license.workspace = true
-repository.workspace = true
-edition.workspace = true
+version = "0.1.0"
+authors = []
+license = "MIT"
+repository = "https://github.com/bthos/time-tracker-billing-plugin"
+edition = "2021"
 description = "Billing plugin for Time Tracker"
 
 [lib]
+name = "billing_plugin"
 crate-type = ["cdylib"]
 
 [dependencies]
